// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choices snapshots disabled 1`] = `
<div>
  <DropTarget(DroppablePlaceholder)
    choiceBoard={true}
    disabled={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  />
</div>
`;

exports[`choices snapshots empty 1`] = `
<div>
  <DropTarget(DroppablePlaceholder)
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  >
    <DragSource(Choice)
      extraStyle={
        Object {
          "maxWidth": "95%",
        }
      }
      id="1"
      key="0"
      label="foo"
    />
  </DropTarget(DroppablePlaceholder)>
</div>
`;

exports[`choices snapshots empty 2`] = `
<div>
  <DropTarget(DroppablePlaceholder)
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  >
    <Blank
      key="0"
    />
  </DropTarget(DroppablePlaceholder)>
</div>
`;

exports[`choices snapshots renders 1`] = `
<div>
  <DropTarget(DroppablePlaceholder)
    choiceBoard={true}
    onDropChoice={[MockFunction]}
    onRemoveChoice={[MockFunction]}
    style={
      Object {
        "background": "none",
      }
    }
  />
</div>
`;
